<resources>
    <string name="app_name">JgoVideo</string>
    <string name="welcome_back">欢迎回来</string>

    <string name="free_music_json">
        "{\"albumId\":\"001\",\"title\":\"Cute\",\"summary\":\"BenSound\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-570ed96eb055ef17.png\",\"musics\":[{\"musicId\":\"001\",\"title\":\"Tomorrow\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-570ed96eb055ef17.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"002\",\"title\":\"Sunny\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-8a7d311f2a758d4c.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"003\",\"title\":\"Energy\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-9f034d4886c8fe77.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"004\",\"title\":\"Epic\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-00b8c58771bdc34d.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"005\",\"title\":\"Slow motion\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-2ebb4f068282a46e.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"006\",\"title\":\"Cute\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-bc522cc201c4dfef.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"007\",\"title\":\"Beach Party\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-07ab1f9932cdad6a.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"008\",\"title\":\"Actionable\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-fc92ea6f8f164947.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"009\",\"title\":\"Smile\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-805e2bbbbde2a3a6.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"010\",\"title\":\"Forever\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-0af32fdf88b1ee83.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"011\",\"title\":\"Yestoday\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-570ed96eb055ef17.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"012\",\"title\":\"MonDay\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-8a7d311f2a758d4c.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"013\",\"title\":\"Tuesday\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-9f034d4886c8fe77.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"014\",\"title\":\"Wednesday\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-00b8c58771bdc34d.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"015\",\"title\":\"Thursday\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-2ebb4f068282a46e.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"016\",\"title\":\"Friday\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-bc522cc201c4dfef.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"017\",\"title\":\"Saturday\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-07ab1f9932cdad6a.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"018\",\"title\":\"Sunday\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-fc92ea6f8f164947.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"019\",\"title\":\"HaHa\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-805e2bbbbde2a3a6.png\",\"url\":\"bensound-sunny.mp3\"},{\"musicId\":\"020\",\"title\":\"Good\",\"artist\":{\"name\":\"UnKnown\"},\"coverImg\":\"https://upload-images.jianshu.io/upload_images/57036-0af32fdf88b1ee83.png\",\"url\":\"bensound-sunny.mp3\"}]}"
    </string>
    <string name="play">播放</string>
    <string name="notify_of_play">播放时的通知栏展示</string>
    <string name="network_unconnected">网络断开了</string>

    <string name="play_repeat">列表循环</string>
    <string name="play_repeat_once">单曲循环</string>
    <string name="play_shuffle">随机播放</string>

    <string name="unfinished">这是个前排吃瓜的按钮！ ^_^</string>
    <string name="item_home">ホーム</string>
    <string name="item_news">ニュース</string>
    <string name="item_video">動画</string>
    <string name="item_image">画像</string>
    <string name="item_schedule">日程</string>

    <!-- favorite player -->
    <string name="player_doncic">ルカ・ドンチッチ</string>
    <string name="team_lakers">レイカーズ</string>
    <string name="team_mavericks">マーベリックス</string>
    <string name="team_magic">マジック</string>
    <string name="team_warriors">ワォリアーズ</string>

    <string name="follow">フォロー</string>

    <!-- result -->
    <string name="live_str">中継</string>
    <string name="time_str">11:09</string>

    <string name="news_title_str">コービーとシャツを交換したイニエスタ</string>


    <string name="app_slogan">I Love This Game !</string>
    <string name="project_title">本项目中用到的技术点包括：</string>
    <string name="Copyright">Product with love by jgo @2020</string>
    <string name="search_page_tip">本页面用于测试 Navigation 路由导航</string>

    <string name="relearn_android">《重学安卓》</string>
    <string name="learn_more_friends">付费读者加微信进群 myatejx</string>
    <string name="learn_more">Learn More</string>


    <string name="dummy_news_title_1">フィットネス維持を目指す選手</string>
    <string name="dummy_news_content_1">新型コロナウイルスの影響でNBAのシーズンは停止しており、選手たちが再び試合できるようになるのがいつかは不明だ。ほとんどバスケットボールのコートに入ることもできず、練習施設も安全上の理由で閉まっている。一般のヘルスクラブやジムも同様だ。
だが、何かしらの形で、NBA選手たちのワークアウトは続いている。APが報じた。
デンバー・ナゲッツのコンディショニング強化アシスタントコーチは「非常に興味深いテーマだ」と話している。
「いつパフォーマンスできるか分からない中でアスリートのモチベーションを保つのは、おそらく、これまでで最も大変なタスクのひとつだ。オフシーズンですら、いつ報告するかの日にちが決まっている。そういう日にちがないのは、とても厄介なんだよ」。</string>




</resources>
