<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/common_3dp"
            android:background="@drawable/layout_gray_line"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/common_10dp"
                android:background="@color/white"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@drawable/player_doncic"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_5dp"
                android:text="@string/player_doncic"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_5dp"
                android:text="@string/team_lakers"
                android:textSize="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/common_20dp"
                android:paddingEnd="@dimen/common_20dp"
                android:paddingTop="@dimen/common_5dp"
                android:paddingBottom="@dimen/common_5dp"
                android:layout_margin="@dimen/common_5dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/btn_selector_primary"
                android:textColor="@drawable/text_selector_primary"
                android:text="@string/follow"/>

        </LinearLayout>
    </RelativeLayout>

</layout>