<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="click"
            type="com.jgo.video.ui.fragment.MainFragment.ClickProxy" />

        <variable
            name="vm"
            type="com.jgo.video.view_model.state.MainViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapse_layout"
                android:layout_width="match_parent"
                android:layout_height="252dp"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bar_layout_img"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5"/>

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    drawable_radius="@{8}"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_collapseMode="pin">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical" >
                        <net.steamcrafted.materialiconlib.MaterialIconView
                            android:id="@+id/iv_menu"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_marginStart="12dp"
                            android:layout_alignParentStart="true"
                            android:onClick="@{()->click.openMenu()}"
                            android:scaleType="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:materialIcon="menu"
                            app:materialIconColor="@color/white"
                            app:materialIconSize="24dp" />

                        <net.steamcrafted.materialiconlib.MaterialIconView
                            android:id="@+id/iv_search"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_marginEnd="12dp"
                            android:layout_alignParentEnd="true"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:onClick="@{()->click.search()}"
                            android:scaleType="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:materialIcon="magnify"
                            app:materialIconColor="@color/white"
                            app:materialIconSize="24dp" />

                        <TextView
                            android:id="@+id/tv_app"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_toStartOf="@+id/iv_search"
                            android:onClick="@{()->click.search()}"
                            android:text="@string/app_name"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center_vertical"
                            android:visibility="gone"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>

                </com.google.android.material.appbar.MaterialToolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                initTabAndPage="@{vm.initTabAndPage}"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fitsSystemWindows="true"
                android:background="@color/white"
                app:tabBackground="@color/colorPrimary"
                app:tabIndicatorColor="@color/colorPrimaryOrange"
                app:tabIndicatorHeight="4dp"
                app:tabSelectedTextColor="@color/colorPrimaryOrange"
                app:tabTextColor="@color/white"
                app:tabMode="fixed">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_home"/>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_news"/>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_video"/>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_image"/>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_schedule"/>

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

            <!--<androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_home"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/light_gray"/>

            </androidx.core.widget.NestedScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/adapter_play_item" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_video"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/light_gray"/>

            </androidx.core.widget.NestedScrollView>-->

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>